--- a/backend/.env.docker
+++ b/backend/.env.docker
@@ -1,7 +1,7 @@
-MONGODB_URI="mongodb://mongo/wanderlust"
-REDIS_URL="redis://redis:6379"
+MONGODB_URI="mongodb://10.101.192.96/wanderlust"
+REDIS_URL="redis://10.110.217.106:6379"
 PORT=8080
-FRONTEND_URL=http://3.95.32.207:5173
+FRONTEND_URL="http://4.188.91.2:5173"
 ACCESS_COOKIE_MAXAGE=120000
 ACCESS_TOKEN_EXPIRES_IN='120s'
 REFRESH_COOKIE_MAXAGE=120000
