--- a/backend/.env.docker
+++ b/backend/.env.docker
@@ -1,5 +1,5 @@
-MONGODB_URI="mongodb://10.101.192.96/wanderlust"
-REDIS_URL="redis://10.110.217.106:6379"
+MONGODB_URI="mongodb://mongo-service/wanderlust"
+REDIS_URL="redis://redis-service:6379"
 PORT=8080
 FRONTEND_URL="http://4.188.91.2:5173"
 ACCESS_COOKIE_MAXAGE=120000
