--- a/kubernetes/redis.yaml
+++ b/kubernetes/redis.yaml
@@ -21,6 +21,13 @@ spec:
           image: redis
           ports:
             - containerPort: 27017
+          volumeMounts:
+            - name: mongo-storage
+              mountPath: /data
+      volumes:
+        - name: mongo-storage
+          persistentVolumeClaim:
+            claimName: mongo-pvc
 
 ---
 apiVersion: v1
