--- a/kubernetes/persistentVolume.yaml
+++ b/kubernetes/persistentVolume.yaml
@@ -6,8 +6,8 @@ metadata:
 spec:
   capacity:
     storage: 5Gi
+  volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: /opt/mongoDB-Data/
-  persistentVolumeReclaimPolicy: Retain
+    path: /data/db
